# iot_net_planner

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
.github/workflows/: jekyll-gh-pages.yml
docs/: conf.py  optimization.rst  prediction.rst
docs/_build/doctrees/: environment.pickle  geo.doctree  index.doctree  optimization.doctree  prediction.doctree
docs/_build/html/: .buildinfo  genindex.html  geo.html  index.html  objects.inv  optimization.html  prediction.html  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: geo.rst.txt  index.rst.txt
examples/: brooklyn_252_example.py  fill_script.py  generate_prr_file.py  geneva_dsm_bnp_example.py  make_predictions.py  make_pypath.py  make_train_data.py  simplex_bnp_example.py
scripts/: demand_creation.py  estimate_sc.py  fac_creation.py  hybrid_fac.py  make_pypath.py  manual_fac.py  maximize_coverage.py  minimize_budget.py  plot_coverage.py  train_model.py  train_premade_model.py
src/iot_net_planner/geo/: demand_grid.py  dsm_filler.py  dsm_sampler.py  estimate_facs.py  plotting.py  sampler.py  simplex_sampler.py
src/iot_net_planner/optimization/: bnp_model.py  opt_budget_model.py  opt_coverage_model.py  scip_model.py
src/iot_net_planner/prediction/: coverage.py  lr_253features.py  ml_253_input.py  prr_cache.py  prr_file.py  prr_general_training.py  prr_model.py  sc_estimation.py  xg_253features.py
src/iot_net_planner/prediction/ml_models/: 3features_ithaca_LR_april3_prr.pth  brooklyn_sc.pkl  brooklyn_sc_252.onnx  brooklyn_sc_3.onnx  brooklyn_sc_3.pkl  brooklyn_scaler_model.onnx  brooklyn_xgboost_combined_250x1_with_d_h.json  los_model_3features.py  lr_model_252features.py  xg_model_252features.py
