[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iot_net_planner"
version = "0.1.0"
description = "A package for IoT network planning"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Alfredo Rodriguez", email = "aar245@cornell.edu" },
    { name = "Ali Amadeh", email = "" },
    { name = "Sander Aarts", email = "" },
    { name = "Jacob Dentes", email = "jmd477@cornell.edu" },
]
dependencies = [
    "numpy < 2.0.0",
    "opensimplex",
    "pandas",
    "geopandas",
    "rasterio",
    "pyscipopt",
    "torch",
    "scikit-learn",
    "skl2onnx",
    "onnxruntime",
    "statsmodels",
    "seaborn",
    "xgboost",
    "contextily",
    "fiona"
]
requires-python = ">=3.6"
keywords = ["IoT", "network", "planning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

packages = ["iot_net_planner"]

[tool.hatch.build.targets.sdist]
include = ["src/**"]

[tool.hatch.build.targets.wheel]
include = ["src/**"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
paths = ["src"]
